--- a/index.html
+++ b/index.html
@@ -5,44 +5,53 @@
   <script type="text/javascript" src="/node_modules/angular/angular.js"></script>
 	<script type="text/javascript" src="index.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body ng-app="App" id="main">
   <div ng-controller="BooksController" id="container">
     <h1> Bookshelf </h1>
+      <h4>Add a Book...</h4>
+      <input class="form-control" ng-model="title" placeholder="Title"></input> </br>
 
-    <div>
-      Title </br>
-      <input ng-model="title"></input> </br>
+      <input class="form-control" ng-model="author" placeholder="Author"></input> 
+      </br>
 
-      Author </br>
-      <input ng-model="author"></input> </br>
-
-      <button ng-click="createBook(title, author)"> Submit </button>
-    </div>
+      <button ng-click="createBook(title, author)" class="btn btn-success"> Submit </button>
 
     <div id="library">
+
       <ul>
+        <input class="form-control" ng-model="searchText" placeholder="Search Library...">
 
-        <li ng-repeat="book in library">
+        <li ng-repeat="book in library | filter: searchText" class="book">
 
-          <strong>Title:</strong> 
           <span ng-hide="book.editorEnabled"> 
-            {{ book.title }} 
+            <span class="title"> {{ book.title }} </span>
           </span>
           <input ng-show="book.editorEnabled" ng-model="book.title">
 
           <div class="right" ng-model="pages"> 
             <span ng-hide="book.editorEnabled"> Pages: {{ book.pages || 0 }} </span>
             <input ng-show="book.editorEnabled" ng-model="book.pages">
-            <button ng-hide="book.editorEnabled" ng-click="book.toggleEditor()">Edit</button>
-            <button ng-show="book.editorEnabled" ng-click="book.toggleEditor()">Save</button>
+            <button class="btn btn-primary btn-xs" ng-hide="book.editorEnabled" ng-click="book.toggleEditor()">Edit</button>
+            <button class="btn btn-success btn-xs" ng-show="book.editorEnabled" ng-click="book.toggleEditor()">Save</button> </br>
+            <button href="#" ng-click="book.toggleQuotes()" class="btn btn-xs btn-danger right">Toggle Quotes</button>
           </div></br>
 
-          <strong>Author:</strong> 
           <span ng-hide="book.editorEnabled"> 
             {{ book.author }} 
           </span>
-          <input ng-show="book.editorEnabled" ng-model="book.author">    
+          <input ng-show="book.editorEnabled" ng-model="book.author">
+          <div ng-show="book.showQuotes">
+            <h4>Quotes: </h4>
+              <ul>
+                <li ng-repeat="quote in book.quotes">
+                  {{ quote }}
+                </li>
+              </ul>
+            <input ng-model="book.newQuote" class="form-control" placeholder="Add a new quote...">
+            <button ng-click="book.addQuote(book.newQuote)" class="btn btn-primary">Save</button>
+          </div>    
 
         </li>
 
