--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
 	<title>Bookshelf.io</title>
   <script type="text/javascript" src="/node_modules/angular/angular.js"></script>
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="api_key.js"></script>
+  <script type="text/javascript" src="index.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body ng-app="App" id="main">
   <div ng-controller="BooksController" id="container">
     <h1> Bookshelf </h1>
+      <button ng-click="getBooks()"></button>
       <h4>Add a Book...</h4>
       <input class="form-control" ng-model="title" placeholder="Title"></input> </br>
 
