--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 <body ng-app="App" id="main">
   <div ng-controller="BooksController" id="container">
     <h1> Bookshelf </h1>
-      <button ng-click="getBooks()"></button>
       <h4>Add a Book...</h4>
       <input class="form-control" ng-model="title" placeholder="Title"></input> </br>
 
       <input class="form-control" ng-model="author" placeholder="Author"></input> 
       </br>
 
-      <button ng-click="createBook(title, author)" class="btn btn-success"> Submit </button>
+      <button ng-click="createBook(title, author, true)" class="btn btn-success"> Submit </button>
 
     <div id="library">
 
-      <ul>
+      <ul id="book-list">
         <input class="form-control" ng-model="searchText" placeholder="Search Library...">
 
         <li ng-repeat="book in library | filter: searchText" class="book">
@@ -33,7 +32,7 @@
           <input ng-show="book.editorEnabled" ng-model="book.title">
 
           <div class="right" ng-model="pages"> 
-            <span ng-hide="book.editorEnabled"> Pages: {{ book.pages || 0 }} </span>
+            <span ng-hide="book.editorEnabled"> Pages: {{ book.pages }} </span>
             <input ng-show="book.editorEnabled" ng-model="book.pages">
             <button class="btn btn-primary btn-xs" ng-hide="book.editorEnabled" ng-click="book.toggleEditor()">Edit</button>
             <button class="btn btn-success btn-xs" ng-show="book.editorEnabled" ng-click="book.toggleEditor()">Save</button> </br>
@@ -44,13 +43,16 @@
             {{ book.author }} 
           </span>
           <input ng-show="book.editorEnabled" ng-model="book.author">
+
           <div ng-show="book.showQuotes">
             <h4>Quotes: </h4>
-              <ul>
-                <li ng-repeat="quote in book.quotes">
-                  {{ quote }}
-                </li>
-              </ul>
+              <div class="well">
+                <ul>
+                  <li ng-repeat="quote in book.quotes">
+                    <em> {{ quote }} </em>
+                  </li>
+                </ul>
+              </div>
             <input ng-model="book.newQuote" class="form-control" placeholder="Add a new quote...">
             <button ng-click="book.addQuote(book.newQuote)" class="btn btn-primary">Save</button>
           </div>    
